<resources>
    <array name="gender">
        <item>HOMBRE</item>
        <item>MUJER</item>
    </array>
    <string name="barpromotion">Nombre de la promocion</string>
    <string name="client">Cliente</string>
    <string name="place">Establecimiento</string>
    <string name="choose_profile">Seleccionar perfil</string>
    <string name="app_name">Tricky Track</string>
    <string name="place_title">Búsqueda de establecimientos</string>
    <string name="search">Buscar un bar</string>
    <string name="gender">Generos</string>
    <array name="genders">
        <item>Rock</item>
        <item>Punk</item>
        <item>New Age</item>
        <item>Vallenato</item>
        <item>Salsa</item>
        <item>Años 80</item>
        <item>Merengue</item>
        <item>Regueton</item>
        <item>Metal</item>
        <item>Crossover</item>
        <item>Dancehall</item>
    </array>
    <string name="validate">Validar horario</string>
    <string name="nearme">Buscar cercanos</string>
    <string name="find_button">Buscar</string>
    <string name="title_activity_maps">Buscar establecimientos</string>
</resources>
